<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/search_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:text="@string/search"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/search_text">
        <EditText
            android:id="@+id/et_keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/hint_keyword"
            android:autofillHints=""
            android:inputType="text" />

        <RadioGroup
            android:id="@+id/rg_keyword_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checkedButton="@id/rb_id"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/rg_acc_type"
            app:layout_constraintTop_toBottomOf="@id/et_keyword">

            <RadioButton
                android:id="@+id/rb_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_acc_id" />

            <RadioButton
                android:id="@+id/rb_branch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_branch" />

            <RadioButton
                android:id="@+id/rb_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_acc_type" />

            <RadioButton
                android:id="@+id/rb_customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_customer_id" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/rg_acc_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_keyword"
            app:layout_constraintStart_toEndOf="@id/rg_keyword_type"
            android:checkedButton="@id/rb_saving"
            android:visibility="invisible">

            <RadioButton
                android:id="@+id/rb_saving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="储蓄账户" />

            <RadioButton
                android:id="@+id/rb_checking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="支票账户" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="加载全部"
        android:textColor="@color/purple_700"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/search_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/search"
        android:textColor="@color/purple_700"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/search_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/cancel"
        android:textColor="@color/purple_700"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/search_layout"
        app:layout_constraintEnd_toStartOf="@id/btn_search"
        android:layout_marginTop="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>