<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/search_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:text="@string/pay_loan"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/search_text">

        <EditText
            android:id="@+id/et_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/hint_pay_num"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/btn_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/pay"
        android:textColor="@color/purple_700"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/search_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/cancel"
        android:textColor="@color/purple_700"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/search_layout"
        app:layout_constraintEnd_toStartOf="@id/btn_pay"
        android:layout_marginTop="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>